@@ -1,6 +1,7 @@
 Overview of changes in version 1.0.00:
 
   - Can import information from IMDb
+  - Added statistics page
 
 
 Overview of changes in version 0.8.41:
